--- a/blog/2017-03-16-使用--cmake-管理项目.md
+++ b/blog/2017-03-16-使用--cmake-管理项目.md
@@ -324,7 +324,7 @@ See also "/Users/wangchunye/d/working/test_cmake/build/CMakeFiles/CMakeOutput.lo
 cmake  -DOpenCV_DIR=/usr/local/Cellar/opencv/2.4.13.2/share/OpenCV ..
 ```
 
-`OpenCVConfig.cmake` 文件的开头有文档，明确找到库之后，那些变量可以使用。
+`OpenCVConfig.cmake` 文件的开头有文档，说明了使用方法，例如，哪些变量可以使用。
 
 
 
@@ -503,7 +503,7 @@ add_dependencies(hello_proto googleprotobuf_proj)
  - `ADD_CUSTOM_COMMAND` 是底层 cmake 命令， 自定义 makefile 的规则，用于从 proto 文件生成 cpp 源码。
  - 注意生成的源代码被放在了 `--cpp_out  ${CMAKE_CURRENT_BINARY_DIR}` 下面，这是一个好习惯，不要让中间文件污染源代码目录了。
  - `add_dependencies` 比较重要，这个表明需要先下载编译 protobuf ，然后才能编译 `hello_proto`
- 
+
 
 # 其他常用功能
 
