--- a/blog/2017-03-26-c---模板的类型推导.md
+++ b/blog/2017-03-26-c---模板的类型推导.md
@@ -29,5 +29,5 @@ quote text blog/src/template_type_deduction.out
 其他几个不关键的点
 
  - 宏展开的时候， `#expr` 可以展成字符串。 stringify
- - 必须指定 `Widget() {}` 构造函数，否则 `const Widget cw` 会报错。为什么会报错呢，参考 [http://stackoverflow.com/questions/7411515/why-does-c-require-a-user-provided-default-constructor-to-default-construct-a](stack overflow)
+ - 必须指定 `Widget() {}` 构造函数，否则 `const Widget cw` 会报错。为什么会报错呢，参考 [stack overflow](http://stackoverflow.com/questions/7411515/why-does-c-require-a-user-provided-default-constructor-to-default-construct-a)
  - `boost::typeindex::type_id_with_cvr` 是在运行期打印类型信息的可靠工具。
