--- a/blog/2017-03-26-c---中-lambda-的类型和大小.md
+++ b/blog/2017-03-26-c---中-lambda-的类型和大小.md
@@ -9,3 +9,50 @@ comments: true
 ```include
 quote cpp blog/src/cpp_lambda_size_type.cpp
 ```
+
+程序的输出结果
+
+```include
+quote text blog/src/cpp_lambda_size_type.out
+```
+
+这里可以看到，每一个 lambda 有自己的匿名类，`main::$_0` 。
+
+如果我们试图创建这样的对象
+
+```cpp
+    decltype(x) x1;
+```
+
+会有报错
+
+```
+blog/src/cpp_lambda_size_type.cpp:21:17: error: no matching constructor for initialization of 'decltype(x)' (aka '(lambda at blog/src/cpp_lambda_size_type.cpp:16:14)')
+    decltype(x) x1;
+                ^
+blog/src/cpp_lambda_size_type.cpp:16:14: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
+    auto x = []() { cout << "hello world" << endl; };
+             ^
+blog/src/cpp_lambda_size_type.cpp:16:14: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 0 were provided
+1 error generated.
+```
+
+这说明这个匿名类是没有默认构造函数的，但是可以创建引用
+
+```
+    decltype(x) & x1 = x;
+    x1();
+    decltype(y) & y1 = y;
+    y1();
+```
+
+而把 lambda 表达式赋值给一个 function 对象的时候，这个对象的大小就是 48 bytes 了。这是因为调用了
+
+```cpp
+template< class F >
+function::function( F f );
+```
+
+这个构造函数。
+
+从这个角度上看，直接使用 `lambda` ，并且配合使用 `auto`, `decltype` ，可以得到更加紧凑的函数对象。
