--- a/blog/2017-03-26-c---中-lambda-的类型和大小.md
+++ b/blog/2017-03-26-c---中-lambda-的类型和大小.md
@@ -6,6 +6,10 @@ categories:
 comments: true
 ---
 
+本文说明 c++11 lambda 生成一个匿名类，当没有 capture 到任何变量的时候，
+大小几乎为零。其实是 1 byte ，因为 c++ 不允许 0 字节的结构体。
+
+
 ```include
 quote cpp blog/src/cpp_lambda_size_type.cpp
 ```
