--- a/blog/2015-07-08-C-----的右值引用问题.md
+++ b/blog/2015-07-08-C-----的右值引用问题.md
@@ -360,7 +360,7 @@ void g(const T& a)
 c++11 rvalue reference 这样解决了这个问题。
 
 
-```
+```cpp
 #include <iostream>
 #include <vector>
 using namespace std;
@@ -439,7 +439,7 @@ void wrapper(T&& arg)
 
 1. 如果调用 wrapper 的实参是 `std::string` 类型的右值引用，那么 T 是
    `std::string` （不是 `std::string&` 也不是 `const std::string&` 也
-   不是事 `std::string&&`) ，那么 `std::forward` 保证传递右值引用给
+   不是是 `std::string&&`) ，那么 `std::forward` 保证传递右值引用给
    `foo` 函数，即调用重载右值引用的 `foo`。
 2. 如果调用 wrapper 的实参是 左值常量的 `std::string` ，那么 `T` 是
    `const std::string&` 并且 `std::forward` 保证传递常量左值引用给
