--- a/blog/2017-04-06-ssh-key-转发.md
+++ b/blog/2017-04-06-ssh-key-转发.md
@@ -10,7 +10,7 @@ draft: false
 
 # 无密码登陆
 
-公钥就是锁，和私钥就是钥匙。我们可以生成一对钥匙和锁，然后把给服务器上锁，把钥匙留着笔记本上，然后就可以无密码登陆了。
+公钥就是锁，私钥就是钥匙。我们可以生成一对钥匙和锁，然后把给服务器上锁，把钥匙留着笔记本上，然后就可以无密码登陆了。
 
 ## 生成钥匙和锁
 
@@ -86,12 +86,12 @@ ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDIPBvlQ0sfpPFmSsgi2odj/dS9GlaiYCXZOKKm9R2t
 ssh -A hostA
 ```
 
-`-A` 这样登陆 hostA 之后，再登陆其他主机，就不用再次输入密码了，因为 hostB 会问 hostA 上的 ssh 进程，钥匙是啥，ssh 进程再问笔记本上的 `ssh-agent` 进程，钥匙是啥。`ssh-add` 已经加进去了钥匙，在你安全的笔记本上。所以这样办法很好。
+`-A` 这样登陆 hostA 之后，再登陆其他主机，就不用再次输入密码了，因为 hostB 会问 hostA 上的 ssh 进程，钥匙是啥，ssh 进程再问笔记本上的 `ssh-agent` 进程，钥匙是啥。`ssh-add` 已经加进去了钥匙，在你安全的笔记本上。所以这个办法很好。
 
 
 # tmux
 
-我们都知道 tmux 是一个好东西，上面的连续穿梭的办法就有问题了。第一次在 hostA 上创建 tmux 会话的时候，可以不用密码穿梭到 hostB 上，然后我们 `tmux attach` 重新连接的时候，就还需要输入密码了，原因是进程不能共享一些环境变量。下面的方法可以搞定这个问题。
+我们都知道 tmux 是一个好东西。 配合使用 tmux attach 的时候，上面的连续穿梭的办法就有问题了。第一次在 hostA 上创建 tmux 会话的时候，可以不用密码穿梭到 hostB 上，然后我们 `tmux attach` 重新连接的时候，就还需要输入密码了，原因是进程不能共享一些环境变量。下面的方法可以搞定这个问题。
 
 
 [stackoverflow](http://unix.stackexchange.com/questions/114558/how-can-i-forward-a-already-forwarded-ssh-key-into-tmux)
