--- a/blog/2017-04-06-ssh-key-转发.md
+++ b/blog/2017-04-06-ssh-key-转发.md
@@ -91,7 +91,10 @@ ssh -A hostA
 
 # tmux
 
-我们都知道 tmux 是一个好东西。 配合使用 tmux attach 的时候，上面的连续穿梭的办法就有问题了。第一次在 hostA 上创建 tmux 会话的时候，可以不用密码穿梭到 hostB 上，然后我们 `tmux attach` 重新连接的时候，就还需要输入密码了，原因是进程不能共享一些环境变量。下面的方法可以搞定这个问题。
+我们都知道 tmux 是一个好东西。 配合使用 tmux attach 的时候，上面wangchunye@wangchunye:~ » ssh-agent
+SSH_AUTH_SOCK=/var/folders/_g/t1l2srf912b7yg4qnw8k5jr00000gn/T//ssh-CS0a1Qh3satx/agent.95237; export SSH_AUTH_SOCK;
+SSH_AGENT_PID=95238; export SSH_AGENT_PID;
+echo Agent pid 95238;的连续穿梭的办法就有问题了。第一次在 hostA 上创建 tmux 会话的时候，可以不用密码穿梭到 hostB 上，然后我们 `tmux attach` 重新连接的时候，就还需要输入密码了，原因是进程不能共享一些环境变量。下面的方法可以搞定这个问题。
 
 
 [stackoverflow](http://unix.stackexchange.com/questions/114558/how-can-i-forward-a-already-forwarded-ssh-key-into-tmux)
