--- a/blog/2017-04-29-c-c---的编译和链接的问题.md
+++ b/blog/2017-04-29-c-c---的编译和链接的问题.md
@@ -8,7 +8,7 @@ comments: true
 
 ## 介绍
 
-在 [2014-11-22-c-hello-world.html](hello world) 中，提到了一些编译链接
+在 [hello world in c](2014-11-22-c-hello-world.html) 中，提到了一些编译链接
 的问题。在实际项目中，大家学习很多 c/c++ 的语言特性，而忽略了编译和链
 接的过程。 对编译和链接过程的理解，反过来有助于我们理解 c/c++ 的很多语
 言特性。
