--- a/blog/2017-04-29-c-c---的编译和链接的问题.md
+++ b/blog/2017-04-29-c-c---的编译和链接的问题.md
@@ -15,7 +15,7 @@ comments: true
 
 ## 前提
 
-为了让观点更加明显，去除所有的库函数调用。这样就需要理解 main 函数的返回值。
+为了让观点更加明显，我去除所有的库函数调用。这样就需要理解 main 函数的返回值。
 
 我们写一个最简单的程序
 
@@ -236,7 +236,7 @@ g++ -o a.out simple_main.o -L. -lfoo2 -lfoo1
 shared library 的使用，必须重新编译所有目标文件，让目标文件是位置无关的代码 PIC, Position Independent Code。
 
 ```
-g++ -c -fPIC -o simple_main.o  simple_main.cpp                                                       1 ↵
+g++ -c -fPIC -o simple_main.o  simple_main.cpp
 g++ -c -fPIC -o foo1.o foo1.cpp
 g++ -c -fPIC -o foo2.o foo2.cpp
 ```
