--- a/blog/2017-04-29-c-c---的编译和链接的问题.md
+++ b/blog/2017-04-29-c-c---的编译和链接的问题.md
@@ -284,14 +284,9 @@ g++ -L. -o a.out simple_main.o -lfoo2 -lfoo1
 和静态链接库类似，符号重复定义的时候，没有报错，取决于链接命令中，库出现的顺序。
 
 
-延伸，故事才开始，共享链接和静态连接有很多很多的不同。换句话说，静态链
-接很简单，几乎和直接链接目标文件一样。动态链接就不一样了。还取决于生成
-期链接和运行期链接。 rpath, `LD_LIBRARY_PATH` 等等。比较复杂。这里支持
-其复杂性，不做展开讨论。
+延伸，故事才开始，共享链接和静态连接有很多很多的不同。换句话说，静态链接很简单，几乎和直接链接目标文件一样。动态链接就不一样了。还取决于生成期链接和运行期链接。 rpath, `LD_LIBRARY_PATH` 等等。比较复杂。这里指出其复杂性，不做展开讨论。
 
 
 ## 链接动态链接库
 
-这里指出 windows 下的 DLL 是动态链接库，和 *unix 的共享链接库有很多类
-似，但也有很多不同。我在 windows 下的经验有限，不是十分了解。仅仅指出
-他们不同。
+这里指出 windows 下的 DLL 是动态链接库，和 *unix 的共享链接库有很多类似，但也有很多不同。我在 windows 下的经验有限，不是十分了解。仅仅指出他们不同。
