--- a/blog/2017-04-29-配置-haskell-的开发环境.md
+++ b/blog/2017-04-29-配置-haskell-的开发环境.md
@@ -9,7 +9,7 @@ comments: true
 
 ghc 官方下载，然后安装，挺顺利的。 我用的是 osx 下的 ghc 8.0.2.
 
-安装 emacs 下的 haskell-mode.el 也十分容易，按照 [](https://github.com/haskell/haskell-mode) 的做法也没有什么难度。
+安装 emacs 下的 haskell-mode.el 也十分容易，按照 [https://github.com/haskell/haskell-mode]() 的手册操作，也没有什么难度。
 
 
 
@@ -26,5 +26,16 @@ main =
 
 ```
 λ> :main
+hello world
+```
+
+我们也可以手工加载这个程序，假设，我们的源文件叫做  `Main.hs` ，那么，我们可以使用 `:load` 指令加载这个文件。
+
+```
+λ> :load Main.hs
+[1 of 1] Compiling Main             ( Main.hs, interpreted )
+Ok, modules loaded: Main.
+Collecting type info for 1 module(s) ...
+λ> main
 hello world
 ```
