--- a/blog/2017-04-29-配置-haskell-的开发环境.md
+++ b/blog/2017-04-29-配置-haskell-的开发环境.md
@@ -39,3 +39,55 @@ Collecting type info for 1 module(s) ...
 λ> main
 hello world
 ```
+
+Haskell 寻找模块的方式和 Java 类似，模块名称必须大写字母开头，模块名称和源文件名称一致。
+
+```hs
+-- Foo.hs
+module Foo where
+
+foo x y = x + y
+```
+
+运行这个程序
+
+```
+λ> :load Foo.hs
+[1 of 1] Compiling Foo              ( Foo.hs, interpreted )
+Ok, modules loaded: Foo.
+Collecting type info for 1 module(s) ...
+λ> Foo.foo 1 2
+3
+```
+
+修改 Foo.hs 如下
+
+```
+-- Foo.hs
+module Foo where
+
+foo x y = x + y
+
+bar x y = x * y
+```
+
+我们可以用 `:reload` 指令重新加载模块。
+
+```
+λ> :reload
+[1 of 1] Compiling Foo              ( Foo.hs, interpreted )
+Ok, modules loaded: Foo.
+Collecting type info for 1 module(s) ...
+λ> Foo.bar 2 4
+8
+```
+
+每次都输入 `Foo.` 也挺麻烦的，我们可以用 `:module` 指令简化这个操作
+
+```
+λ> :module +Foo
+λ> foo 2 3
+5
+λ> bar 3 3
+9
+```
