use pandoc-include-code

--- a/blog/2017-03-25-c---中的坑点.md
+++ b/blog/2017-03-25-c---中的坑点.md
@@ -40,8 +40,7 @@ void foo()
 
 和
 
-```include
-quote c++ blog/src/auto_unique_ptr.cpp
+```{.c++ include=cpp_src/auto_unique_ptr.cpp}
 ```
 
 是不一样。
@@ -54,6 +53,5 @@ quote c++ blog/src/auto_unique_ptr.cpp
 
 这个值得专门写一篇文章了。
 
-```include
-quote c++ blog/src/auto_unique_ptr.cpp
+```{.c++ include=cpp_src/auto_unique_ptr.cpp}
 ```
