--- a/blog/2017-03-26-c---中-lambda-的类型和大小.md
+++ b/blog/2017-03-26-c---中-lambda-的类型和大小.md
@@ -10,14 +10,12 @@ comments: true
 大小几乎为零。其实是 1 byte ，因为 c++ 不允许 0 字节的结构体。
 
 
-```include
-quote cpp blog/src/cpp_lambda_size_type.cpp
+```{.cpp include=cpp_src/cpp_lambda_size_type.cpp}
 ```
 
 程序的输出结果
 
-```include
-quote text blog/src/cpp_lambda_size_type.out
+```{.text include=cpp_src/cpp_lambda_size_type.out}
 ```
 
 这里可以看到，每一个 lambda 有自己的匿名类，`main::$_0` 。
@@ -31,13 +29,13 @@ quote text blog/src/cpp_lambda_size_type.out
 会有报错
 
 ```
-blog/src/cpp_lambda_size_type.cpp:21:17: error: no matching constructor for initialization of 'decltype(x)' (aka '(lambda at blog/src/cpp_lambda_size_type.cpp:16:14)')
+cpp_src/cpp_lambda_size_type.cpp:21:17: error: no matching constructor for initialization of 'decltype(x)' (aka '(lambda at cpp_src/cpp_lambda_size_type.cpp:16:14)')
     decltype(x) x1;
                 ^
-blog/src/cpp_lambda_size_type.cpp:16:14: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
+cpp_src/cpp_lambda_size_type.cpp:16:14: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
     auto x = []() { cout << "hello world" << endl; };
              ^
-blog/src/cpp_lambda_size_type.cpp:16:14: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 0 were provided
+cpp_src/cpp_lambda_size_type.cpp:16:14: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 0 were provided
 1 error generated.
 ```
 
