--- a/blog/2017-03-26-c---模板的类型推导.md
+++ b/blog/2017-03-26-c---模板的类型推导.md
@@ -7,8 +7,7 @@ comments: true
 ---
 
 
-```include
-quote cpp blog/src/template_type_deduction.cpp
+```{.cpp include=cpp_src/template_type_deduction.cpp}
 ```
 
 
@@ -16,8 +15,7 @@ quote cpp blog/src/template_type_deduction.cpp
 输出结果是
 
 
-```include
-quote text blog/src/template_type_deduction.out
+```{.text include=cpp_src/template_type_deduction.out}
 ```
 
 这里面我们注意到
