--- a/blog/2017-05-21-c---中构造函数与析构函数的执行顺序.md
+++ b/blog/2017-05-21-c---中构造函数与析构函数的执行顺序.md
@@ -7,14 +7,12 @@ draft: true
 comments: true
 ---
 
-```include
-quote cpp cpp_src/ctor_1.cpp
+```{.cpp include=cpp_src/ctor_1.cpp}
 ```
 
 执行结果
 
-```include
-quote plain cpp_src/ctor_1.out
+```{.plain include=cpp_src/ctor_1.out}
 ```
 
 `bar():f_() {...}` 构造函数中，冒号后面跟的是一个成员变量初始化列表，member initialization list 。指明每个成员变量的构造参数。
