--- a/blog/2017-05-21-c---中的高维数组.md
+++ b/blog/2017-05-21-c---中的高维数组.md
@@ -10,8 +10,7 @@ comments: true
 数值计算中，常常需要操作高维数组，C++ 很容易写出来占用内存多，而且速度慢的程序。
 
 
-```include
-quote cpp cpp_src/high_dim_array_1.cpp
+```{.cpp include=cpp_src/high_dim_array_1.cpp}
 ```
 
 
@@ -21,8 +20,7 @@ quote cpp cpp_src/high_dim_array_1.cpp
 可以用一维数组模拟高维数组。
 
 
-```include
-quote cpp cpp_src/high_dim_array_2.cpp
+```{.cpp include=cpp_src/high_dim_array_2.cpp}
 ```
 
 我们看看速度
@@ -83,12 +81,10 @@ char& operator()(size_t c, size_t w, size_t h, size_t r){
 
 我们比较一下访问速度
 
-```include
-quote cpp cpp_src/high_dim_array_3.cpp
+```{.cpp include=cpp_src/high_dim_array_3.cpp}
 ```
 
-```include
-quote cpp cpp_src/high_dim_array_4.cpp
+```{.cpp include=cpp_src/high_dim_array_4.cpp}
 ```
 
 
