--- a/blog/2017-06-18-用c_c++ 编写一个 list 操作程序 .md
+++ b/blog/2017-06-18-用c_c++ 编写一个 list 操作程序 .md
@@ -22,12 +22,12 @@ struct List {
 这是一个单链表结构。
 
 
-```{.cpp include=cpp_src/list_0.cpp}
+```{.cpp include=blog/2017-06-18/list_0.cpp}
 ```
 
 输出结果
 
-```{.plain include=cpp_src/list_0.out}
+```{.plain include=blog/2017-06-18/list_0.out}
 ```
 
 
@@ -35,12 +35,12 @@ struct List {
 
 上面的程序没有使用构造函数，使用构造函数，看起来更加清晰。
 
-```{.cpp include=cpp_src/list_1.cpp}
+```{.cpp include=blog/2017-06-18/list_1.cpp}
 ```
 
 输出结果
 
-```{.plain include=cpp_src/list_1.out}
+```{.plain include=blog/2017-06-18/list_1.out}
 ```
 
 `Cons` 名字来源于 Lisp 系列语言。
@@ -51,12 +51,12 @@ struct List {
 
 上面的程序明显有内存泄露，我们使用智能指针，来防止内存泄露。
 
-```{.cpp include=cpp_src/list_2.cpp}
+```{.cpp include=blog/2017-06-18/list_2.cpp}
 ```
 
 输出结果
 
-```{.plain include=cpp_src/list_2.out}
+```{.plain include=blog/2017-06-18/list_2.out}
 ```
 
 很遗憾， `make_unique` 是 c++14 的内容，如果必须使用 c++11 ，那么就需要我们自己实现一下这个函数。
@@ -78,12 +78,12 @@ namespace std {
 ## 从其他 container 构造一个 list
 
 
-```{.cpp include=cpp_src/list_3.cpp}
+```{.cpp include=blog/2017-06-18/list_3.cpp}
 ```
 
 输出结果
 
-```{.plain include=cpp_src/list_3.out}
+```{.plain include=blog/2017-06-18/list_3.out}
 ```
 
 这里用到了 c++11 的 delegating constructors, 也就是一个构造函数，调用另一个构造函数。
@@ -160,12 +160,12 @@ tail_ = &new_enty.next_;
 
 下面是带有智能指针的代码。
 
-```{.cpp include=cpp_src/list_4.cpp}
+```{.cpp include=blog/2017-06-18/list_4.cpp}
 ```
 
 输出结果
 
-```{.plain include=cpp_src/list_4.out}
+```{.plain include=blog/2017-06-18/list_4.out}
 ```
 
 
@@ -238,10 +238,10 @@ tail_ = &new_enty.next_;
 
 
 
-```{.cpp include=cpp_src/list_5.cpp}
+```{.cpp include=blog/2017-06-18/list_5.cpp}
 ```
 
 输出结果
 
-```{.plain include=cpp_src/list_5.out}
+```{.plain include=blog/2017-06-18/list_5.out}
 ```
