--- a/blog/019-01-01-vector.emplace_back 调用构造函数.md
+++ b/blog/019-01-01-vector.emplace_back 调用构造函数.md
@@ -31,7 +31,7 @@ g++ -DNOEXCEPT=  -DCOPY_CTOR -std=c++11 vector_data_race.cpp
 3. 然后调用拷贝构造函数，把 v0 拷贝到新的内存上。
 4. 然后调用析构函数，析构掉 v0 对象。
 
-这个时候， v0 依然拿着 v[0] 的引用，是悬空引用, 我们查看 v0 的内存地址，可以看到，我们已经在这个地址上，调用过了析构函数。
+这个时候， v0 依然拿着 v[0] 的引用，是悬空引用, 我们查看 v0 的内存地址，可以看到，在这个地址上，我们已经调用过了析构函数。
 
 如果没有定义拷贝构造函数，而是定义移动构造函数，那么 vector 会调用拷贝构造函数。
 
