--- a/blog/2019-01-13-了解 ELF 文件格式.md
+++ b/blog/2019-01-13-了解 ELF 文件格式.md
@@ -8,7 +8,7 @@ comments: true
 
 ELF 是指 Executable and Linkable Foramt ，是 LINUX 下最常用的可执行文件格式。https://en.wikipedia.org/wiki/Executable_and_Linkable_Format 有一个大略的介绍。 man elf 可以得到更详细的介绍。
 
-本文试图只用  echo 的命令，不适用其他任何命令，构造一个 hello world 的程序。这个程序的意义是
+本文试图只用  echo 的命令，而不使用其他任何命令，构造一个 hello world 的程序。这个程序的意义是
 
 1. 深入了解  ELF 的文件格式。
 2. 了解机器指令
