--- a/blog/2019-01-13-了解 ELF 文件格式.md
+++ b/blog/2019-01-13-了解 ELF 文件格式.md
@@ -8,7 +8,7 @@ comments: true
 
 ELF 是指 Executable and Linkable Foramt ，是 LINUX 下最常用的可执行文件格式。https://en.wikipedia.org/wiki/Executable_and_Linkable_Format 有一个大略的介绍。 man elf 可以得到更详细的介绍。
 
-本文试图只用  echo 的命令，而不使用其他任何命令，构造一个 hello world 的程序。这个程序的意义是
+本文试图只用  echo 的命令，而不使用其他任何命令，构造一个 hello world 的二进制可执行程序。这个程序的意义是
 
 1. 深入了解  ELF 的文件格式。
 2. 了解机器指令
@@ -41,7 +41,7 @@ echo -ne '\x00\x00' # e_shstrn
 
 这里为了简化，只有一个 program header ，而没有 section header 。需要注意的是 e_entry ，这个是程序入口地址，是 0x78 。后面可以看到，0x78 是第一个机器指令的偏移量。
 
-这个 program herader table 起始于文件偏移量 0x40 处，即 e_phoff，也就是说，我们 64 字节的 ELF header 后面直接跟着一个 program header table，而这个表格里面只有一项 program header。我们开始构造 56 字节这个 program header 如下。
+这个 program herader table 起始于文件偏移量 0x40 处，即 e_phoff，也就是说，64 字节的 ELF header 后面紧跟着一个 program header table，而这个表格里面只有一项 program header。我们开始构造 56 字节的 program header 。
 
 ```bash
 echo -ne '\x01\x00\x00\x00' # p_type = PT_LOAD
