--- a/blog/2019-01-13-了解 ELF 文件格式.md
+++ b/blog/2019-01-13-了解 ELF 文件格式.md
@@ -54,7 +54,7 @@ echo -ne '\xd8\x00\x00\x00\x00\x00\x00\x00'  # p_memsz = 0x100
 echo -ne '\x00\x00\x20\x00\x00\x00\x00\x00'  # p_align = 0x200000
 ```
 
-首先指定类型是 PT_LOAD ，这样，加载器就会把整个可执行程序里面映射到一个虚拟内存。
+首先指定类型是 PT_LOAD ，这样，加载器就会把整个可执行程序映射到一个虚拟内存上。
 
 p_flag = 0x5 指明虚拟内存的属性是只读的，是可执行的。
 
