--- a/blog/2019-01-13-了解 ELF 文件格式.md
+++ b/blog/2019-01-13-了解 ELF 文件格式.md
@@ -79,7 +79,7 @@ sys_call(WRITE, 1, "hello world!\n", 14);
 sys_call(EXIT, 0x4c);
 ```
 
-为了简化，没有任何函数调用。生成的可执行程序如下：
+为了简化，这里没有任何函数调用。生成的可执行程序如下：
 
 ```
 00000000: 7f45 4c46 0201 0100 0000 0000 0000 0000  .ELF............
@@ -95,7 +95,7 @@ sys_call(EXIT, 0x4c);
 000000a0: 0f05 6865 6c6c 6f20 776f 726c 6421 0a00  ..hello world!..
 ```
 
-总共 176 个字节，假设这个程序叫做 a.out 。
+总共 176  (0xb0) 个字节，假设这个程序叫做 a.out 。
 
 ```
 % chmod +x a.out
