--- a/blog/2019-01-13-了解 ELF 文件格式.md
+++ b/blog/2019-01-13-了解 ELF 文件格式.md
@@ -82,6 +82,7 @@ sys_call(EXIT, 0x4c);
 为了简化，这里没有任何函数调用。生成的可执行程序如下：
 
 ```
+% bash hello.sh | xxd 
 00000000: 7f45 4c46 0201 0100 0000 0000 0000 0000  .ELF............
 00000010: 0300 3e00 0100 0000 7800 0000 0000 0000  ..>.....x.......
 00000020: 4000 0000 0000 0000 0000 0000 0000 0000  @...............
@@ -98,6 +99,7 @@ sys_call(EXIT, 0x4c);
 总共 176  (0xb0) 个字节，假设这个程序叫做 a.out 。
 
 ```
+% bash hello.sh > a.out 
 % chmod +x a.out
 % ./a.out
 hello world!
