--- a/blog/2019-01-13-了解 ELF 文件格式.md
+++ b/blog/2019-01-13-了解 ELF 文件格式.md
@@ -110,7 +110,5 @@ hello world!
 
 整个可执行程序的长度是 176 （0xb0) 个字节， 所以第一个 program header 中的 filesz 和 memsz 都是 0xb0。
 
-
-
-
+在实际使用中，我们不使用编译器，连接器，而几乎手工构造一个可执行程序，这样做意义不大。通过这个实验，我们可以解密 linux 可执行程序的魔术，让可执行程序看起来不再那么神秘了。
 
