--- a/src/2019-01-01-vector.emplace_back-调用构造函数.md
+++ b/src/2019-01-01-vector.emplace_back-调用构造函数.md
@@ -1,10 +1,5 @@
----
-layout: post
-title:  "vector.emplace_back 调用构造函数"
-date:   2019/01/01 12:48:42
-categories:
-comments: true
----
+# vector.emplace_back 调用构造函数
+
 
 `vector::emplace_back` 会以出乎我们意料之外的方式，调用元素的析构函数和构造函数。
 
@@ -13,15 +8,18 @@ comments: true
 这里有一个例子:
 
 
-```{.cpp include=blog/2019-01-01/vector_data_race.cpp}
+```cpp
+{{#include 2019-01-01/vector_data_race.cpp}}
 ```
 
 我们只定义拷贝构造函数的情况下。
 
+```console
+% g++ -DNOEXCEPT=  -DCOPY_CTOR -std=c++11 vector_data_race.cpp
 ```
-g++ -DNOEXCEPT=  -DCOPY_CTOR -std=c++11 vector_data_race.cpp
-```
-```{.text include=blog/2019-01-01/vector_data_race1.out}
+
+```plain
+{{#include ./2019-01-01/vector_data_race1.out}}
 ```
 
 在调用 v1.push 之前， capacity = 1 , size = 1 ，这个时候在追加一个元素 v2 的时候，发生了以下事情:
@@ -36,40 +34,43 @@ g++ -DNOEXCEPT=  -DCOPY_CTOR -std=c++11 vector_data_race.cpp
 如果没有定义拷贝构造函数，而是定义移动构造函数，那么 vector 会调用拷贝构造函数。
 
 
-```
- g++ -DNOEXCEPT=  -DMOVE_CTOR -std=c++11 vector_data_race.cpp
+```console
+% g++ -DNOEXCEPT=  -DMOVE_CTOR -std=c++11 vector_data_race.cpp
 ```
 
-```{.text include=blog/2019-01-01/vector_data_race2.out startLine=5 endLine=5}
+```plain
+{{#include 2019-01-01/vector_data_race2.out:5:10}}
 ```
 
 如果同时定义拷贝构造函数和移动构造函数的话，vector 调用的是拷贝构造函数还是移动构造函数呢？
 
-```
-g++ -DNOEXCEPT= -DCOPY_CTOR -DMOVE_CTOR -std=c++11 vector_data_race.cpp
+```console
+% g++ -DNOEXCEPT= -DCOPY_CTOR -DMOVE_CTOR -std=c++11 vector_data_race.cpp
 ```
 
-```{.text include=blog/2019-01-01/vector_data_race3.out startLine=5 endLine=5}
+```console
+{{#include ./2019-01-01/vector_data_race3.out:5:11}}
 ```
 
 这里可以看到，vector 调用的是拷贝构造函数。这里让人比较吃惊。一般来说，移动构造函数是比拷贝构造函数高效的。
 
 参考 [https://en.cppreference.com/w/cpp/container/vector/emplace_back]() 中的描述，可以知道，这个是因为我们没有声明 `noexcept`
 
-```
+```text
 Exceptions
 If an exception is thrown, this function has no effect (strong exception guarantee). If T's move constructor is not noexcept and is not CopyInsertable into *this, vector will use the throwing move constructor. If it throws, the guarantee is waived and the effects are unspecified.
 ```
 
 我们试试看，声明移动构造函数为 `noexcept`
 
-```
-g++ -DNOEXCEPT=noexcept -DCOPY_CTOR -DMOVE_CTOR -std=c++11 vector_data_race.cpp
+```console
+% g++ -DNOEXCEPT=noexcept -DCOPY_CTOR -DMOVE_CTOR -std=c++11 vector_data_race.cpp
 ```
 
 我们得到下面的结果
 
-```{.text include=blog/2019-01-01/vector_data_race4.out startLine=5 endLine=5}
+```text
+{{#include ./2019-01-01/vector_data_race4.out:5:10}}
 ```
 
 **一定注意，如果想让 vector 调用元素的移动构造函数，一定要声明 noexcept**
