--- a/src/2019-01-13-了解-ELF-文件格式.md
+++ b/src/2019-01-13-了解-ELF-文件格式.md
@@ -1,10 +1,5 @@
----
-layout: post
-title:  "了解 ELF 文件格式"
-date:   2019/01/13 12:48:42
-categories:
-comments: true
----
+# 了解 ELF 文件格式
+
 
 ELF 是指 Executable and Linkable Foramt ，是 LINUX 下最常用的可执行文件格式。https://en.wikipedia.org/wiki/Executable_and_Linkable_Format 有一个大略的介绍。 man elf 可以得到更详细的介绍。
 
@@ -27,7 +22,7 @@ echo -ne '\x00\x00\x00\x00\x00\x00\x00'    # EI_PAD unused
 echo -ne '\x03\x00'  # e_type = ET_DYN
 echo -ne '\x3e\x00'  # e_machine = 0x3e, x86_64
 echo -ne '\x01\x00\x00\x00'  # e_version = 1, the orignal version of ELF
-echo -ne '\x78\x00\x00\x00\x00\x00\x00\x00' # e_entry 
+echo -ne '\x78\x00\x00\x00\x00\x00\x00\x00' # e_entry
 echo -ne '\x40\x00\x00\x00\x00\x00\x00\x00' # e_phoff
 echo -ne '\x00\x00\x00\x00\x00\x00\x00\x00' # e_shoff
 echo -ne '\x00\x00\x00\x00' # e_flags = 0
@@ -65,14 +60,14 @@ echo -ne '\xba\x0d\x00\x00\x00'         # mov    $0xc,%edx
 echo -ne '\x48\x8d\x35\x1e\x00\x00\x00' # lea    0x1e(%rip),%rsi
 echo -ne '\x48\xc7\xc7\x01\x00\x00\x00' # mov    $0x1,%rdi
 echo -ne '\x48\xc7\xc0\x01\x00\x00\x00' # mov    $0x1,%rax
-echo -ne '\x0f\x05'                     # syscall 
+echo -ne '\x0f\x05'                     # syscall
 echo -ne '\x48\xc7\xc7\x4c\x00\x00\x00' # mov    $0x4c,%rdi
 echo -ne '\xb8\x3c\x00\x00\x00'         # mov    $0x3c,%eax
-echo -ne '\x0f\x05'                     # syscall 
+echo -ne '\x0f\x05'                     # syscall
 echo -ne 'hello world!\n\x00'           # the data
 ```
 
-这段代码，可以参考 man syscalls, man syscall 。等效的 c 代码就是 
+这段代码，可以参考 man syscalls, man syscall 。等效的 c 代码就是
 
 ```c
 sys_call(WRITE, 1, "hello world!\n", 14);
@@ -81,8 +76,8 @@ sys_call(EXIT, 0x4c);
 
 为了简化，这里没有任何函数调用。生成的可执行程序如下：
 
-```
-% bash hello.sh | xxd 
+```console
+% bash hello.sh | xxd
 00000000: 7f45 4c46 0201 0100 0000 0000 0000 0000  .ELF............
 00000010: 0300 3e00 0100 0000 7800 0000 0000 0000  ..>.....x.......
 00000020: 4000 0000 0000 0000 0000 0000 0000 0000  @...............
@@ -98,8 +93,8 @@ sys_call(EXIT, 0x4c);
 
 总共 176  (0xb0) 个字节，假设这个程序叫做 a.out 。
 
-```
-% bash hello.sh > a.out 
+```console
+% bash hello.sh > a.out
 % chmod +x a.out
 % ./a.out
 hello world!
@@ -111,4 +106,3 @@ hello world!
 整个可执行程序的长度是 176 （0xb0) 个字节， 所以第一个 program header 中的 filesz 和 memsz 都是 0xb0。
 
 在实际使用中，我们不使用编译器，连接器，而几乎手工构造一个可执行程序，这样做意义不大。通过这个实验，我们可以解密 linux 可执行程序的魔术，让可执行程序看起来不再那么神秘了。
-
