--- a/src/2019-02-03-c++-可否同时抛出两个异常.md
+++ b/src/2019-02-03-c++-可否同时抛出两个异常.md
@@ -29,7 +29,7 @@ int main(int argc, char *argv[])
 
 这个时候，程序的输出是
 
-```
+```plain
 Deconstructor is invoked.
 catch exception: only for testing
 ```
@@ -70,7 +70,7 @@ int main(int argc, char *argv[])
 
 程序输出结果是
 
-```
+```plain
 Deconstructor is invoked. value=2
 Deconstructor is invoked. value=1
 catch exception: only for testing
@@ -114,7 +114,7 @@ int main(int argc, char *argv[])
 
 上面的例子中，输出结果是
 
-```
+```plain
 Deconstructor is invoked.
 libc++abi.dylib: terminating with uncaught exception of type std::invalid_argument: another exception
 ```
