--- a/src/2017-07-09-计算一个整数有的二进制表示中多少个-1-.md
+++ b/src/2017-07-09-计算一个整数有的二进制表示中多少个-1-.md
@@ -1,10 +1,5 @@
----
-layout: post
-title:  "计算一个整数有的二进制表示中多少个 1 "
-date:   2017/07/09 17:30:23
-categories:
-comments: true
----
+# 计算一个整数有的二进制表示中多少个 1
+
 
 
 很早以前记着有这么一个技巧，计算一个整数的二进制表示多少个 1 。
@@ -24,7 +19,7 @@ int count(T a) {
 例如输出结果
 
 
-```
+```text
  0x0 -> 0
  0x1 -> 1
  0x2 -> 1
