--- a/src/2017-06-18-用c_c++-编写一个-list-操作程序-.md
+++ b/src/2017-06-18-用c_c++-编写一个-list-操作程序-.md
@@ -1,10 +1,5 @@
----
-layout: post
-title:  "用c/c++ 编写一个 list 操作程序 "
-date:   2017/06/18 20:21:24
-categories:
-comments: true
----
+#  用c/c++ 编写一个 list 操作程序
+
 
 ## 介绍
 
@@ -22,12 +17,14 @@ struct List {
 这是一个单链表结构。
 
 
-```{.cpp include=blog/2017-06-18/list_0.cpp}
+```cpp
+{{#include ./2017-06-18/list_0.cpp}}
 ```
 
 输出结果
 
-```{.plain include=blog/2017-06-18/list_0.out}
+```text
+{{#include ./2017-06-18/list_0.out}}
 ```
 
 
@@ -35,12 +32,14 @@ struct List {
 
 上面的程序没有使用构造函数，使用构造函数，看起来更加清晰。
 
-```{.cpp include=blog/2017-06-18/list_1.cpp}
+```cpp
+{{#include ./2017-06-18/list_1.cpp}}
 ```
 
 输出结果
 
-```{.plain include=blog/2017-06-18/list_1.out}
+```text
+{{#include ./2017-06-18/list_1.out}}
 ```
 
 `Cons` 名字来源于 Lisp 系列语言。
@@ -51,12 +50,14 @@ struct List {
 
 上面的程序明显有内存泄露，我们使用智能指针，来防止内存泄露。
 
-```{.cpp include=blog/2017-06-18/list_2.cpp}
+```cpp
+{{#include ./2017-06-18/list_2.cpp}}
 ```
 
 输出结果
 
-```{.plain include=blog/2017-06-18/list_2.out}
+```text
+{{#include ./2017-06-18/list_2.out}}
 ```
 
 很遗憾， `make_unique` 是 c++14 的内容，如果必须使用 c++11 ，那么就需要我们自己实现一下这个函数。
@@ -78,12 +79,14 @@ namespace std {
 ## 从其他 container 构造一个 list
 
 
-```{.cpp include=blog/2017-06-18/list_3.cpp}
+```cpp
+{{#include ./2017-06-18/list_3.cpp}}
 ```
 
 输出结果
 
-```{.plain include=blog/2017-06-18/list_3.out}
+```text
+{{#include ./2017-06-18/list_3.out}}
 ```
 
 这里用到了 c++11 的 delegating constructors, 也就是一个构造函数，调用另一个构造函数。
@@ -160,12 +163,14 @@ tail_ = &new_enty.next_;
 
 下面是带有智能指针的代码。
 
-```{.cpp include=blog/2017-06-18/list_4.cpp}
+```cpp
+{{#include ./2017-06-18/list_4.cpp}}
 ```
 
 输出结果
 
-```{.plain include=blog/2017-06-18/list_4.out}
+```text
+{{#include ./2017-06-18/list_4.out}}
 ```
 
 
@@ -238,10 +243,16 @@ tail_ = &new_enty.next_;
 
 
 
-```{.cpp include=blog/2017-06-18/list_5.cpp}
+```cpp
+{{#include ./2017-06-18/list_5.cpp}}
 ```
 
 输出结果
 
-```{.plain include=blog/2017-06-18/list_5.out}
+```text
+{{#include ./2017-06-18/list_5.out}}
 ```
+
+## TODO
+
+如果 list 十分长，那么在调用析构函数的时候，有可能导致堆栈空间不够，爆栈了。
