--- a/src/2017-04-29-配置-haskell-的开发环境.md
+++ b/src/2017-04-29-配置-haskell-的开发环境.md
@@ -1,10 +1,5 @@
----
-layout: post
-title:  "配置 haskell 的开发环境"
-date:   2017/04/29 19:24:21
-categories:
-comments: true
----
+#  "配置 haskell 的开发环境"
+
 
 
 ghc 官方下载，然后安装，挺顺利的。 我用的是 osx 下的 ghc 8.0.2.
@@ -24,14 +19,14 @@ main =
 
 然后选择菜单，`Haskell -> Start Interpreter` ，然后选择，`Haskell -> Load  File` ，这样进入一个 `*haskell*` 的 buffer 。运行指令
 
-```
+```console
 λ> :main
 hello world
 ```
 
 我们也可以手工加载这个程序，假设，我们的源文件叫做  `Main.hs` ，那么，我们可以使用 `:load` 指令加载这个文件。
 
-```
+```console
 λ> :load Main.hs
 [1 of 1] Compiling Main             ( Main.hs, interpreted )
 Ok, modules loaded: Main.
@@ -51,7 +46,7 @@ foo x y = x + y
 
 运行这个程序
 
-```
+```console
 λ> :load Foo.hs
 [1 of 1] Compiling Foo              ( Foo.hs, interpreted )
 Ok, modules loaded: Foo.
@@ -62,7 +57,7 @@ Collecting type info for 1 module(s) ...
 
 修改 Foo.hs 如下
 
-```
+```console
 -- Foo.hs
 module Foo where
 
@@ -73,7 +68,7 @@ bar x y = x * y
 
 我们可以用 `:reload` 指令重新加载模块。
 
-```
+```console
 λ> :reload
 [1 of 1] Compiling Foo              ( Foo.hs, interpreted )
 Ok, modules loaded: Foo.
@@ -84,7 +79,7 @@ Collecting type info for 1 module(s) ...
 
 每次都输入 `Foo.` 也挺麻烦的，我们可以用 `:module` 指令简化这个操作
 
-```
+```console
 λ> :module +Foo
 λ> foo 2 3
 5
